# studiohub

./: Makefile  README.md
backend/: .env.example  .gitignore  Makefile  celerybeat-schedule-shm  celerybeat-schedule-wal  manage.py  pyproject.toml  ruff.toml
backend/apps/core/: aliases.py  apps.py  managers.py  middleware.py  protocols.py  querysets.py  types.py  typing.py
backend/apps/core/api/: __init__.py  builders.py  constants.py  exceptions.py  pagination.py  permission.py  renderers.py  responses.py  serializers.py  viewsets.py
backend/apps/core/choices/: __init__.py  base.py  department.py  file.py  lifecycle.py  priority.py  publish.py  record.py  visibility.py
backend/apps/core/events/: __init__.py  autodiscover.py  base.py  bus.py  constants.py  decorators.py  dispatcher.py  exceptions.py  handlers.py  publisher.py  registry.py  subscriber.py  typing.py  utils.py
backend/apps/core/filters/: __init__.py  base.py  date.py  metadata.py  ordering.py  organization.py  ownership.py  search.py  soft_delete.py  status.py
backend/apps/core/i18n/: __init__.py  constants.py  countries.py  currencies.py  languages.py  timezones.py  validators.py
backend/apps/core/logging/: __init__.py  config.py  constants.py  context.py  filters.py  formatters.py  handlers.py  logger.py  middleware.py  utils.py
backend/apps/core/managers/: base.py  lifecycle.py  publishable.py
backend/apps/core/middleware/: __init__.py  audit.py  authentication.py  base.py  locale.py  maintenance.py  organization.py  request_id.py  security.py  timezone.py
backend/apps/core/models/: __init__.py  base.py  init.py
backend/apps/core/selectors/: base.py
backend/apps/core/services/: __init__.py  audit.py  base.py  bulk.py  business.py  cache.py  color.py  crud.py  email.py  event.py  lifecycle.py  metadata.py  notifications.py  ordering.py  publishable.py  search.py  slug.py  soft_delete.py  storage.py
backend/apps/core/utils/: datetime.py  enums.py  files.py  hashing.py  json.py  logger.py  response.py  serializers.py  slug.py  strings.py  uuid.py
backend/apps/core/validators/: __init__.py  base.py  color.py  common.py  country.py  currency.py  datetime.py  email.py  file.py  frame.py  image.py  json.py  language.py  naming.py  password.py  path.py  regex.py  sequence.py  slug.py  timezone.py  url.py  uuid.py  video.py
backend/apps/identity/: apps.py  domain_events.py  events.py  handlers.py
backend/apps/identity/admin/: __init__.py  api_key.py  backup_code.py  group.py  invitation.py  login_attempt.py  login_history.py  mfa_device.py  permission.py  personal_access_token.py  role.py  session.py  team.py  team_membership.py  trusted_device.py  user.py  (+1 more)
backend/apps/organization/: __init__.py  apps.py  constants.py  events.py  urls.py
backend/apps/production/: apps.py
backend/config/: asgi.py  env.py  logging.py  urls.py  wsgi.py
backend/config/settings/: base.py  ci.py  docker.py  local.py  logging.py  production.py  testing.py
backend/core/: celery.py
(+966 files in other folders)
